# LimitationsOfAdam

./: CMakeLists.txt  idbd_paper_experiment.cpp  walking_sitting_experiment.cpp
experiment_configs/: idbd_paper.json  walking_sitting.json
include/: learner.h
include/environments/: supervised_tracking.h
src/: learner.cpp
src/environments/: supervised_tracking.cpp
src/experiment/: Database.cpp  Experiment.cpp
